figured out how to add map into index.html but not specific component

--- a/components/route-maps.html
+++ b/components/route-maps.html
@@ -1,5 +1,4 @@
 <template id="route-maps">
-<!-- { { { { { { { { { { { { { { { {  CSS  } } } } } } } } } } } } } } } } } -->
 <style>
 	.container {
 		margin: 5% auto 5% 10%;
@@ -12,7 +11,6 @@
 		border: 1px solid #C7C7C7;
 	}
 </style>
-<!-- < < < < < < < < < < < < < < < <  html > > > > > > > > > > > > > > > > > -->
 <content>
 	<div class="main" var="x _data">
 		<div class="container">
@@ -36,10 +34,16 @@
 	</div>
 </content>
 </template>
-<!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
 <script>
+	// mapboxgl.accessToken = 'pk.eyJ1IjoiZW1pbHlhbm5lbW9zZXMiLCJhIjoiY2o2MDNzcGFpMGhnZzMyb2Y4cHRzeTN4dSJ9.fczhGQMwUNueFQTTsfuw2A';
+	// var map = new mapboxgl.Map({
+	// 	container: 'map',
+	// 	style: 'mapbox://styles/mapbox/outdoors-v10',
+	// 	center: [-122.486052, 37.830348],
+	// 	zoom: 15
+	// });
+
 	(( c = new Component('route-maps-tag') )=>{
 	  c._NEW_ELM()
 	})()
 </script>
-<!--  / / / / / / / / / / / / / / /   Notes    / / / / / / / / / / / / / / / -->
