--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,5 +1,4 @@
 <template id="navbar">
-<!-- { { { { { { { { { { { { { { { {  CSS  } } } } } } } } } } } } } } } } } -->
 	<style>
 		.nav-content {
 			background-image: url("gfx/maroon-glitter.png");
@@ -9,6 +8,7 @@
 		}
 		.nav-buttons {
 			float: right;
+			margin-left: 20px;
 		}
 		.button {
 			border: 1px solid maroon;
@@ -19,16 +19,16 @@
 			padding: 5px;
 		}
 	</style>
-<!-- < < < < < < < < < < < < < < < <  html > > > > > > > > > > > > > > > > > -->
 	<content>
 		<div class="nav-content">
 			<span class="button" onclick="_PAGE_SET('home')">Emily's Run Tracker</span>
 			<span class="nav-buttons"><span class="button" id="button" onclick="_PAGE_SET('route-maps')">Route Maps</span></span>
+			<span class="nav-buttons"><span class="button" id="button" onclick="_PAGE_SET('run-data')">Run Data</span></span>
+			<span class="nav-buttons"><span class="button" id="button" onclick="_PAGE_SET('graph')">Graphs</span></span>
 		</div>
 		<hr style="margin-top:0px;">
 	</content>
 </template>
-<!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
 <script>
 
 (( c = new Component('navbar-tag') )=>{
@@ -40,4 +40,3 @@
 })()
 
 </script>
-<!--  / / / / / / / / / / / / / / /   Notes    / / / / / / / / / / / / / / / -->
