--- a/components/route-maps.html
+++ b/components/route-maps.html
@@ -14,9 +14,9 @@
 <content>
 	<div class="main" var="x _data">
 		<div class="container">
-			<p>Map one</p>
+			<p>Map functionality to be added at a later date!</p>
 		</div>
-		<div class="container">
+		<!-- <div class="container">
 			<p>Map two</p>
 		</div>
 		<div class="container">
@@ -30,7 +30,7 @@
 		</div>
 		<div class="container">
 			<p>Map six</p>
-		</div>
+		</div> -->
 	</div>
 </content>
 </template>
