--- a/components/run-data.html
+++ b/components/run-data.html
@@ -4,12 +4,12 @@
 <content>
 	<div class="run-data" var="x _data">
 		<p>x.gpx[0].name</p>
-	<div for="{i} gpx[0].trkseg.trkpt">
-		<p>{i}.time</p>
+	<div for="{i} gpx[0].trackArray">
+		<p>{i}.lat</p>
 	</div>
 		<p>x.gpx[1].name</p>
-	<div for="{i} gpx[1].trkseg.trkpt">
-		<p>{i}.time</p>
+	<div for="{i} gpx[1].trackArray">
+		<p>{i}.lon</p>
 	</div>
 	</div>
 </content>
