saving map addition

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -22,9 +22,10 @@
 	<content>
 		<div class="nav-content">
 			<span class="button" onclick="_PAGE_SET('home')">Emily's Run Tracker</span>
-			<span class="nav-buttons"><span class="button" id="button" onclick="_PAGE_SET('route-maps')">Route Maps</span></span>
+			<!-- <span class="nav-buttons"><span class="button" id="button" onclick="_PAGE_SET('route-maps')">Route Maps</span></span> -->
 			<span class="nav-buttons"><span class="button" id="button" onclick="_PAGE_SET('run-data')">Run Data</span></span>
 			<span class="nav-buttons"><span class="button" id="button" onclick="_PAGE_SET('graph')">Graphs</span></span>
+			<span class="nav-buttons"><span class="button" id="button" onclick="_PAGE_SET('mapbox')">Maps</span></span>
 		</div>
 		<hr style="margin-top:0px;">
 	</content>
