--- a/components/navigation-cards.html
+++ b/components/navigation-cards.html
@@ -1,13 +1,14 @@
 <template id="navigation-cards">
 <style>
 #mapbox {
-	height: 100%;
+	height:  100%;
+	width: 100%;
 }
 .container {
 	margin: 5% auto 5% 10%;
 	float: left;
 	overflow: scroll;
-	padding: 30px;
+	padding: 10px;
 	width: 200px;
 	height: 200px;
 	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
@@ -17,11 +18,8 @@
 <content>
 	<div class="main"  for="x,i sortedRuns">
 		<div class="container">
-			<div>
+			<div id="mapbox">
 				<p> x </p>
-				<div>
-					<div id="mapbox"></div>
-				</div>
 			</div>
 		</div>
 	</div>
@@ -31,19 +29,22 @@
 
 (( c = new Component('navigation-cards-tag') )=>{
 	c._ON_SET = (attr)=>{
+
+		if (!c.map) {
+			mapboxgl.accessToken = 'pk.eyJ1IjoiZW1pbHlhbm5lbW9zZXMiLCJhIjoiY2o2MDNzcGFpMGhnZzMyb2Y4cHRzeTN4dSJ9.fczhGQMwUNueFQTTsfuw2A';
+	  	    c.map = new mapboxgl.Map({
+	        container: c.I('mapbox'),
+	        style: 'mapbox://styles/mapbox/streets-v9',
+	        center: [-97.726176, 30.278436],
+	        zoom: 14
+	      });
+		}
+
 		if (c.data.length > 0) {
 			c.data = { runs: c.data }
 			c.timeOrder()
 			//c.runLocation()
 		}
-
-	mapboxgl.accessToken = 'pk.eyJ1IjoiZW1pbHlhbm5lbW9zZXMiLCJhIjoiY2o2MDNzcGFpMGhnZzMyb2Y4cHRzeTN4dSJ9.fczhGQMwUNueFQTTsfuw2A';
-      c.map = new mapboxgl.Map({
-        container: c.I('mapbox'),
-        style: 'mapbox://styles/mapbox/streets-v9',
-        center: [-97.726176, 30.278436],
-        zoom: 14
-      });
 	}
 
 	c.timeOrder = ()=>{
