putting accumulated data on front end ui

--- a/components/mapbox.html
+++ b/components/mapbox.html
@@ -19,15 +19,15 @@
 
 (( c = new Component('mapbox-tag') )=>{
   c._ON_SET = (attr)=>{
-// 	if (!c.map) {
-// 	mapboxgl.accessToken = 'pk.eyJ1IjoiZW1pbHlhbm5lbW9zZXMiLCJhIjoiY2o2MDNzcGFpMGhnZzMyb2Y4cHRzeTN4dSJ9.fczhGQMwUNueFQTTsfuw2A';
-//       c.map = new mapboxgl.Map({
-//         container: c.I('mapbox'),
-//         style: 'mapbox://styles/mapbox/streets-v9',
-//         center: [-97.726176, 30.278436],
-//         zoom: 14
-//       });
-// 	}
+	if (!c.map) {
+	mapboxgl.accessToken = 'pk.eyJ1IjoiZW1pbHlhbm5lbW9zZXMiLCJhIjoiY2o2MDNzcGFpMGhnZzMyb2Y4cHRzeTN4dSJ9.fczhGQMwUNueFQTTsfuw2A';
+      c.map = new mapboxgl.Map({
+        container: c.I('mapbox'),
+        style: 'mapbox://styles/mapbox/streets-v9',
+        center: [-97.726176, 30.278436],
+        zoom: 14
+      });
+	}
 
   }
   c._NEW_ELM()
