adding total distance calculations to main page

--- a/components/navigation-cards.html
+++ b/components/navigation-cards.html
@@ -1,50 +1,42 @@
 <template id="navigation-cards">
 <style>
 .container-right {
-	/*margin: 5% auto 5% 10%;*/
 	float: right;
 	overflow: scroll;
-	padding: 10px;
+	padding: 20px;
 	width: 40%;
 	height: 600px;
-	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 	border: 1px solid #C7C7C7;
 }
 .container-left {
 	float: left;
 	overflow: scroll;
-	padding: 10px;
-	width: 40%;
+	padding: 20px;
+	width: 50%;
 	height: 600px;
-	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 	border: 1px solid #C7C7C7;
 }
 </style>
 <content>
 	<div class="container-left">
 		<div class="accumulatedRuns">
-			<p> Accumulated Run Data: </p>
+			<p> Accumulated Run Data </p>
 		</div>
 		<div var="x sortedRuns">
-			<p>Number of runs so far: x.length </p>
-			<p>Average distance: </p>
+			<p>Number of runs since June 25th, 2017: <span> { x.length } </span> </p>
+			<p>Average distance: <span> </span> </p>
+			<p>Total number of miles: <span> </span></p>
+			<p>Average speed (mph): <span> </span></p>
 		</div>
 	</div>
-	<div class="container-right" var="x sortedRuns">
+	<div class="container-right">
 		<div class="latestRun">
-			<p> Latest Run Data: </p>
+			<p> Latest Run Data </p>
 		</div>
-		<div>
-			<p>x[0]</p>
+		<div var="x mostRecentRun">
+			<p>{ x }</p>
 		</div>
 	</div>
-	<!-- <div class="main"  for="x,i sortedRuns">
-		<div class="container">
-			<div id="mapbox">
-				<p> x </p>
-			</div>
-		</div>
-	</div> -->
 </content>
 </template>
 <script>
@@ -55,25 +47,69 @@
 		if (c.data.length > 0) {
 			c.data = { runs: c.data }
 			c.timeOrder()
-			c.runDistance()
+			c.mostRecentRun()
 		}
+		for (const run of c.data.runs) {
+			// console.log(run)
+			let dist = 0
+			let firstPoint = [ run.path[0].latitude, run.path[0].longitude ]
+			for (const point of run.path) {
+				let pointDistance = 0
+				// console.log(lastPoint[0], lastPoint[1])
+				// console.log(point.latitude, point.longitude)
+				c.totalDistance()
+				// add that distance to dist
+				dist += pointDistance
+				// after done change last point to this point.
+			}
+		}
+	}
+
+	c.totalDistance = ()=>{
+		Number.prototype.toRad = function() {
+		   return this * Math.PI / 180;
+		}
+
+		var path1 = [{'latitude': 30.278436, 'longitude': -97.718176}, {'latitude': 30.278480, 'longitude':-97.718228}]
+
+		var lat2 = path1[1]['latitude']
+		var lon2 = path1[1]['longitude']
+		var lat1 = path1[0]['latitude']
+		var lon1 = path1[0]['longitude']
+
+		var R = 6371; // km
+		var x1 = lat2-lat1;
+		var dLat = x1.toRad();
+		var x2 = lon2-lon1;
+		var dLon = x2.toRad();
+		var a = Math.sin(dLat/2) * Math.sin(dLat/2) +
+		                Math.cos(lat1.toRad()) * Math.cos(lat2.toRad()) *
+		                Math.sin(dLon/2) * Math.sin(dLon/2);
+		var c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
+		var d = R * c;
+
+		var totalDistanceInFeet = d * 3280.00
+		// console.log('totalDistance: ',totalDistanceInFeet)
 	}
 
 	c.timeOrder = ()=>{
-		let sortedRuns = []
+		c.sortedRuns = []
 		for (const path of c.data.runs) {
 			var pathName = path.name
-			sortedRuns.push(pathName)
-			sortedRuns.sort()
+			c.sortedRuns.push(pathName)
+			c.sortedRuns.sort()
 		}
-		c.data.sortedRuns = sortedRuns
+		c.data.sortedRuns = c.sortedRuns
 	}
 
-	c.runDistance = ()=>{
-		for (var i = 0; i < c.data.runs.length; i++) {
-			c.data.runs[i]
+	c.mostRecentRun = ()=>{
+		c.runs = []
+		for (const path of c.data.runs) {
+			var pathName = path.name
+			c.runs.push(pathName)
+			c.runs.sort()
 		}
-		console.log('run distance: ', c.data.runs[0].path)
+		c.data.mostRecentRun = c.runs.pop()
 	}
 
 	c._NEW_ELM()
