fixing positioning of front page boxes

--- a/components/navigation-cards.html
+++ b/components/navigation-cards.html
@@ -1,24 +1,19 @@
 <template id="navigation-cards">
 <style>
-.container-right {
-	float: right;
-	overflow: scroll;
-	padding: 20px;
-	width: 40%;
-	height: 600px;
-	border: 1px solid #C7C7C7;
-}
-.container-left {
+.container {
+	margin-top: 1%;
+	margin-right: 8%;
+	margin-left: 8%;
 	float: left;
 	overflow: scroll;
 	padding: 20px;
-	width: 50%;
-	height: 600px;
+	width: 30%;
+	height: 450px;
 	border: 1px solid #C7C7C7;
 }
 </style>
 <content>
-	<div class="container-left">
+	<div class="container">
 		<div class="accumulatedRuns">
 			<p> Accumulated Run Data </p>
 		</div>
@@ -29,7 +24,7 @@
 			<p>Average speed (mph): <span> </span></p>
 		</div>
 	</div>
-	<div class="container-right">
+	<div class="container">
 		<div class="latestRun">
 			<p> Latest Run Data </p>
 		</div>
