--- a/components/route-maps.html
+++ b/components/route-maps.html
@@ -1,49 +1,41 @@
 <template id="route-maps">
 <style>
-	.container {
-		margin: 5% auto 5% 10%;
-		float: left;
-		overflow: scroll;
-		padding: 30px;
-		width: 200px;
-		height: 200px;
-		box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-		border: 1px solid #C7C7C7;
-	}
+#mapbox {
+	height: 400px;
+	width: 100%;
+}
+.text-container {
+	text-align: center;
+	padding-top: 20px;
+}
 </style>
 <content>
-	<div class="main" var="x _data">
-		<div class="container">
-			<p>Map functionality to be added at a later date!</p>
-		</div>
-		<!-- <div class="container">
-			<p>Map two</p>
-		</div>
-		<div class="container">
-			<p>Map three</p>
-		</div>
-		<div class="container">
-			<p>Map four</p>
-		</div>
-		<div class="container">
-			<p>Map Five</p>
-		</div>
-		<div class="container">
-			<p>Map six</p>
-		</div> -->
+	<div class="text-container">
+		<span>Specific running map content coming soon!</span>
 	</div>
+  <div id="main-left">
+    <div id="map-box">
+      <div id="mapbox"></div>
+    </div>
+  </div>
 </content>
 </template>
 <script>
-	// mapboxgl.accessToken = 'pk.eyJ1IjoiZW1pbHlhbm5lbW9zZXMiLCJhIjoiY2o2MDNzcGFpMGhnZzMyb2Y4cHRzeTN4dSJ9.fczhGQMwUNueFQTTsfuw2A';
-	// var map = new mapboxgl.Map({
-	// 	container: 'map',
-	// 	style: 'mapbox://styles/mapbox/outdoors-v10',
-	// 	center: [-122.486052, 37.830348],
-	// 	zoom: 15
-	// });
 
-	(( c = new Component('route-maps-tag') )=>{
-	  c._NEW_ELM()
-	})()
+(( c = new Component('route-maps-tag') )=>{
+  c._ON_SET = (attr)=>{
+	if (!c.map) {
+	mapboxgl.accessToken = 'pk.eyJ1IjoiZW1pbHlhbm5lbW9zZXMiLCJhIjoiY2o2MDNzcGFpMGhnZzMyb2Y4cHRzeTN4dSJ9.fczhGQMwUNueFQTTsfuw2A';
+      c.map = new mapboxgl.Map({
+        container: c.I('mapbox'),
+        style: 'mapbox://styles/mapbox/streets-v9',
+        center: [-122.2583, 37.8012],
+        zoom: 13
+      });
+	}
+	}
+
+  c._NEW_ELM()
+
+})()
 </script>
